chore: snapshot de cambios sin clasificar

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
 # Server Configuration
 PORT=4000
+
+# Modo de ejecución: production, development, test
+# - production: responde a todos los chats de clientes, ignora mensajes propios (fromMe)
+# - test: responde SOLO en tu chat personal de WhatsApp, ignora otros chats
 NODE_ENV=production
 
 # Ollama Configuration
@@ -19,3 +23,10 @@ REDIS_URL=redis://localhost:6379
 
 # Logging
 LOG_LEVEL=info
+
+# Supabase Configuration (Optional - for reservations and database)
+SUPABASE_URL=https://your-project.supabase.co
+SUPABASE_KEY=your-supabase-anon-key
+# For automatic type generation with CLI (optional):
+# SUPABASE_PROJECT_ID=your-project-id
+# SUPABASE_ACCESS_TOKEN=sbp_your_personal_access_token
