--- a/package.json
+++ b/package.json
@@ -12,9 +12,16 @@
     "pm2:restart": "pm2 restart ia-server",
     "pm2:logs": "pm2 logs ia-server",
     "pm2:delete": "pm2 delete ia-server",
+    "supabase:gen": "supabase gen types typescript --project-id $SUPABASE_PROJECT_ID --schema public > src/types/supabase.ts",
+    "types:generate": "ts-node scripts/generate-types.ts",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
+    "test:manual": "ts-node src/__tests__/manual/test-real-business.ts",
+    "test:reservation": "jest reservation-flow",
+    "test:integration": "jest --testPathPattern=integration",
+    "whatsapp:connect": "node whatsapp-client.js",
+    "whatsapp:clean": "rm -rf auth_sessions/*",
     "lint": "eslint src --ext .ts",
     "format": "prettier --write \"src/**/*.ts\""
   },
@@ -31,36 +38,40 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "typescript": "^5.3.3",
-    "zod": "^3.22.4",
+    "@supabase/supabase-js": "^2.78.0",
     "axios": "^1.6.5",
-    "redis": "^4.6.12",
-    "dotenv": "^16.3.1",
+    "baileys": "^7.0.0-rc.9",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "helmet": "^7.1.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
-    "winston": "^3.11.0"
+    "helmet": "^7.1.0",
+    "qrcode-terminal": "^0.12.0",
+    "redis": "^4.6.12",
+    "typescript": "^5.3.3",
+    "winston": "^3.11.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20.10.6",
-    "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17",
     "@types/compression": "^1.7.5",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
-    "ts-node-dev": "^2.0.0",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.1",
-    "supertest": "^6.3.3",
+    "@types/node": "^20.10.6",
+    "@types/qrcode-terminal": "^0.12.2",
     "@types/supertest": "^6.0.2",
-    "eslint": "^8.56.0",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
-    "prettier": "^3.1.1"
+    "eslint": "^8.56.0",
+    "jest": "^29.7.0",
+    "prettier": "^3.1.1",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
+    "ts-node-dev": "^2.0.0"
   },
   "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=9.0.0"
+    "node": ">=22.0.0",
+    "npm": ">=10.0.0"
   }
 }
